Fix the dashboard start screen not centered bug on IE11 (#21066) (#21617)

--- a/src/core_plugins/kibana/public/dashboard/styles/index.less
+++ b/src/core_plugins/kibana/public/dashboard/styles/index.less
@@ -123,6 +123,7 @@
 .start-screen {
   margin: 20px auto;
   max-width: 800px;
+  width: 100%;
   background: #FFF;
   padding: 40px;
   border-radius: 4px;
